src/objects/MCAR_Change_Request__c.object
<CustomObject>
    <description>This Object is used to store MCAR Change request information</description>
    <fields>
        <fullName>Approval_Rejection_Comments__c</fullName>
        <inlineHelpText>Comments to be filled by Super User when Approving\ Rejecting a CR</inlineHelpText>
        <label>Approval \ Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CR_Facility_Name__c</fullName>
        <label>Facility Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Type__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>CR Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Revision__c</fullName>
        <label>Revision ( If Applicable)</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Title, position, or role of this contact</description>
        <inlineHelpText>Title, position, or role of this contact</inlineHelpText>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Part__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Company_Name__c</fullName>
        <label>Facility Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Contact_Email__c</fullName>
        <label>Facility Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Facility_Contact_Name__c</fullName>
        <label>Facility Contact Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Name</label>
        <referenceTo>MCAR_Facility__c</referenceTo>
        <relationshipName>MCAR_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_MCAR_User_Account_Required__c</fullName>
        <description>Please specify if MCAR User Account is Required ?</description>
        <inlineHelpText>If you wish this contact to be able to:
- log in to MCAR and participate actively in the 8D report, select “Manufacturer User”.  
- update contacts for their own company in the MCAR tool, select “Manufacturer Admin”</inlineHelpText>
        <label>Is MCAR User Account Required ?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_Description__c</fullName>
        <inlineHelpText>Please add CR details here.</inlineHelpText>
        <label>MCAR CR Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_Facility_Type__c</fullName>
        <description>Facility Type</description>
        <inlineHelpText>Facility Type</inlineHelpText>
        <label>Facility Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Factory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation Point (CP)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_Manufactuerer_Site__c</fullName>
        <label>Manufacturer Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_NSN_Part_Category__c</fullName>
        <description>NSN Part Category</description>
        <inlineHelpText>NSN Part Category</inlineHelpText>
        <label>Part Type</label>
        <picklist>
            <picklistValues>
                <fullName>NSN Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Cotter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Customer Documentation Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Customer Documentation SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Discrete Semiconductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Document Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Drawing Based Mechanics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN EMI Shielding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Electrical Component active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Electrical Component passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Electromechanical Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Equipment SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN FW Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Fan or Thermal Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Fastening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Frequency Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN HW Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Hardware SI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Holder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Inductive Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Insulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Integrated Circuit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Keycap or Knob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Label or Sticker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Lamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSN Lock Latch Hinge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_NSN_Part_Number__c</fullName>
        <description>NSN Code</description>
        <inlineHelpText>NSN Code</inlineHelpText>
        <label>NSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_Status__c</fullName>
        <description>Status of the CR</description>
        <inlineHelpText>Status of the CR. Only MCAR Super User can Approve or Reject CR</inlineHelpText>
        <label>MCAR CR Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_CR_Type__c</fullName>
        <label>Request For</label>
        <picklist>
            <picklistValues>
                <fullName>Add New Record</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Update Existing Record</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MCAR_SQE_Email__c</fullName>
        <label>SQE Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Supplier_Contact_Email__c</fullName>
        <description>Supplier Contact Email</description>
        <label>Manufacturer Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Supplier_Id__c</fullName>
        <description>Supplier ID</description>
        <label>Manufacturer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mfg_Part_Number__c</fullName>
        <label>Mfg Part Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Part__c</fullName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_ECCN_US_EU_Code__c</fullName>
        <label>ECCN US/EU Code</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Family__c</fullName>
        <label>Part Family</label>
        <picklist>
            <controllingField>MCAR_CR_NSN_Part_Category__c</controllingField>
            <picklistValues>
                <fullName>Battery Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Mounted Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable Harness or Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Back-Up Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LF-Signal Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mains Cord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Cable Harness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiral Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telephone Cord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire Harness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminium Electrolytic Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic Chip Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ceramic Chip Hi-Q Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrolytic Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Capacitive Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyester Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polypropylene Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tantalum Electrolytic Capacitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0_ 2.3 Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.6_5.6 Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7_16 Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNC or TNC Connector 50 or 75 Ohm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT 43 Connector</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Mfg_No__c</fullName>
        <label>Manufacturer Order Code</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_RoHS_Compliancy__c</fullName>
        <label>RoHS Compliancy</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>MCAR_CR_Status__c</columns>
        <columns>MCAR_CR_Type__c</columns>
        <columns>MCAR_CR_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>CR Home</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>MCAR_CR_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Rejection_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>MCAR_Supplier_Id__c</columns>
        <columns>MCAR_Supplier_Contact_Email__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Is_MCAR_User_Account_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_OPEN</fullName>
        <columns>NAME</columns>
        <columns>MCAR_CR_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Rejection_Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>MCAR_Supplier_Id__c</columns>
        <columns>MCAR_Supplier_Contact_Email__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Is_MCAR_User_Account_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MCAR_CR_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All - OPEN</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>MCAR CR No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Closed_Facility</fullName>
        <active>true</active>
        <label>Closed Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Facility_Contacts</fullName>
        <active>true</active>
        <label>Closed Facility Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Manufacturer</fullName>
        <active>true</active>
        <label>Closed Manufacturer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Manufacturer_Contact</fullName>
        <active>true</active>
        <label>Closed Manufacturer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_NSN_Code</fullName>
        <active>true</active>
        <label>Closed NSN Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Contacts</fullName>
        <active>true</active>
        <description>For adding or updating contact information for any facility support personnel</description>
        <label>Facility Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Facility</fullName>
        <active>true</active>
        <description>For adding or updating information for an internal factory, EMS, hub, etc.</description>
        <label>Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_NSN_Part</fullName>
        <active>true</active>
        <description>For adding or updating NSN Codes (component part numbers) in the MCAR Tool (local only)</description>
        <label>NSN Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCAR_Supplier</fullName>
        <active>true</active>
        <description>For adding or updating contact information for any manufacturer (supplier) support personnel</description>
        <label>Manufacturer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufacturer</fullName>
        <active>true</active>
        <description>For adding or updating information for any manufacturer (supplier) of purchased components</description>
        <label>Manufacturer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manufacturer_Site</fullName>
        <active>true</active>
        <description>For adding or updating specific manufacturing location(s) details for a given manufacturer</description>
        <label>Manufacturer Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>For all other questions, issues, requests, or other inquiries</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>closed_other</fullName>
        <active>true</active>
        <label>Closed Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>closed_site</fullName>
        <active>true</active>
        <label>Closed Site</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Only_Super_User_Can_Approve_Reject</fullName>
        <active>true</active>
        <description>Only Super User Can Approve or Reject CR</description>
        <errorConditionFormula>and(  OR(ISPICKVAL(MCAR_CR_Status__c ,&apos;Approved&apos;) ,
ISPICKVAL(MCAR_CR_Status__c ,&apos;Rejected&apos;) 
),
NOT OR($Profile.Name &lt;&gt; &quot;Custom: NSN - MCAR Super User&quot;,
$Profile.Name &lt;&gt; &quot;Custom: MCAR NSN System Admin&quot;
)
)</errorConditionFormula>
        <errorDisplayField>MCAR_CR_Status__c</errorDisplayField>
        <errorMessage>Only Super User can Approve or Reject CR</errorMessage>
    </validationRules>
</CustomObject>